<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LPIC Trainer</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="help">Help</string>
    <string name="copyright">Copyright by Steffen Sindzinski 2013, Licensed under GPL v.3</string>
    <string name="menu_legalnotices">Legal Notices</string>
    <string name="title_activity_test">LPIC Trainer / Testing</string>
    <string name="title_activity_main">LPIC Trainer</string>
    <string name="button_open_file">Select a file</string>
    <string name="message_no_filemanager_installed">No file manager installed!</string>
    <string name="message_no_licence_file">No license file found!</string>
    <string name="message_reading_file">Reading file…</string>
    <string name="message_error_reading_file">Error reading file!</string>
    <string name="message_please_wait">Please wait…</string>
    <string name="button_start_test">Start</string>
    <string name="button_LPIC1">LPIC1</string>
    <string name="button_LPIC2">LPIC2</string>
    <string name="button_LPIC3">LPIC3</string>
    <string name="button_LPIC4">LPIC4</string>
    <string name="trial_purchase">Purchase</string>
    <string name="package_name">Purchase</string>
    <string name="menu_end">End</string>
    <string name="menu_zoom">Zoom</string>
    <string name="menu_about">About</string>
    <string name="menu_eula">Eula</string>
    <string name="button_back">Back</string>
    <string name="button_forward">Forwd</string>
    <string name="button_check">Check</string>
    <string name="cancel">Cancel</string>
    <string name="error_other_error">Other Error</string>
    <string name="pref_appearance_title">Appearance</string>
    <string name="pref_test_title">Test</string>
    <string name="pref_general_title">General</string>
    <string name="trial_mode_prompt">Days left in Trial</string>
    <string name="pref_key_shuffle">Shuffle</string>
    <string name="pref_key_shuffle_title">Shuffle</string>
    <string name="fragment_preferences_title">Preferences</string>
    <string name="title_activity_pref">PrefActivity</string>
    <string name="trial_expired">Trial Expired</string>
    <string name="trial_expired_message">Your trial has been expired!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="dialog_close">Close</string>
    <string name="about_dialog_title">About</string>
    <string name="file_name_license">Help</string>
    <string name="file_name_help">Help</string>
    <string name="legalNotice_dialog_title">Legal Notice</string>
    <string name="pref_key_size_default">1</string>
    <string name="admob_id">ca-app-pub-8612547192837580/2075807553</string>
    <string name="about_eula">End User License Agreement</string>
    <string name="about_licenses">Licenses</string>
    <string name="about_body"><![CDATA[
        <b>Copyright Steffen Sindzinski 2013</b><br>
        Version %s<br><br>
        <a href="http://m.google.com/utos">Terms of Service</a><br><br>
        <a href="http://www.google.com/policies/privacy/">Privacy Policy</a>
    ]]></string>

    <!--suppress AndroidLintTypographyOther -->
    <string name="eula_text"><![CDATA[
        By downloading, installing or using this application or any portion thereof
        (\"Application\"), you agree to these terms and conditions.<br>
        <br>
        Your use of this Application is governed by: (a) the Google Terms of Service
        (<a href="http://m.google.com/utos">m.google.com/utos</a>); (b) Google\'s Privacy Policy
        (<a href="http://www.google.com/policies/privacy">http://www.google.com/policies/privacy</a>);
        and (c) any applicable Google Service-specific terms of service or privacy policies.
        Google\'s terms of service and privacy policies may be updated from time to time and without
        notice.<br>
        <br>
        This Application collects certain information as you use it, including via Google Analytics.
        Google\'s Privacy Policy explains how Google treats your information and protects your
        privacy when you use the Application.  You agree to the use of your data in accordance
        with Google\'s privacy policy.
    ]]></string>
    <string name="title_announcements">Announcements</string>
    <string name="title_about">About</string>
    <string name="ok">OK</string>
    <string name="trial_thanks">Thank You for using during trial period!</string>
</resources>
