<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/pref_general_title"
            android:key="pref_key_general_settings">
        <SwitchPreference
                android:key="pref_key_theme"
                android:title="Dark Theme"
                android:defaultValue="@bool/pref_key_dark_default" />
        <SwitchPreference
                android:key="pref_key_ads"
                android:title="Show Ads"
                android:defaultValue="@bool/pref_key_ads_default" />
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/pref_test_title"
            android:key="pref_key_test_settings">
        <CheckBoxPreference
                android:key="pref_key_shuffle"
                android:title="@string/pref_key_shuffle_title"
                android:defaultValue="@bool/pref_key_shuffle_default" />
        <ListPreference
                android:key="pref_key_size"
                android:title="Text Size"
                android:defaultValue="@string/pref_key_size_default"
                android:entries="@array/size_list"
                android:entryValues="@array/size_list_values" />
    </PreferenceCategory>
</PreferenceScreen>