<?xml version="1.0" encoding="utf-8"?>
<de.sindzinski.lpitrainer.ContainerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:id="@+id/relativeLayout"
                tools:context=".TestFragment">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView_current"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView"
            android:layout_above="@+id/button_check"
            android:layout_below="@+id/textView_current"
            android:fillViewport="true"
            android:scrollbars="vertical">

        <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linearLayout"
                android:layout_above="@+id/button_check">

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_question"
                    android:layout_alignParentTop="true"
                    android:layout_alignLeft="@+id/button_back"
                    />

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/linearLayoutContainer">
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_back"
            android:contentDescription="@string/button_back"
            android:id="@+id/button_back"
            android:src="@drawable/ic_menu_back"
            style="@android:style/Holo.ButtonBar"
            android:layout_alignTop="@+id/button_forward"
            android:layout_alignLeft="@+id/scrollView" android:padding="10dp"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_forward"
            android:contentDescription="@string/button_forward"
            android:id="@+id/button_forward"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_menu_forward"
            android:baselineAligned="false"
            style="@android:style/Holo.ButtonBar"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_check"
            android:contentDescription="@string/button_check"
            android:id="@+id/button_check"
            android:src="@drawable/ic_menu_search"
            style="@android:style/Holo.ButtonBar"
            android:layout_alignTop="@+id/button_forward"
            android:layout_alignParentRight="true"/>

</de.sindzinski.lpitrainer.ContainerLayout>
