<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="de.sindzinski.old.TestActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_current"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView"
            android:layout_above="@+id/button_check"
            android:layout_below="@+id/textView_current"
            android:fillViewport="true"
            android:scrollbars="vertical">

        <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linearLayout"
                android:layout_above="@+id/button_check">

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/textView_question"
                    android:layout_alignParentTop="true"
                    android:layout_alignLeft="@+id/button_back"
                    />

            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_answer"
                    android:layout_gravity="left|center_vertical"/>

            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New CheckBox"
                    android:id="@+id/checkBox_answer1"
                    android:layout_below="@+id/textView_question"/>


            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New CheckBox"
                    android:id="@+id/checkBox_answer2"
                    android:layout_below="@+id/checkBox_answer1"
                    android:layout_alignLeft="@+id/checkBox_answer1"/>

            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New CheckBox"
                    android:id="@+id/checkBox_answer3"
                    android:layout_below="@+id/checkBox_answer2"
                    android:layout_alignLeft="@+id/checkBox_answer2"
                    />

            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New CheckBox"
                    android:id="@+id/checkBox_answer4"
                    android:layout_below="@+id/checkBox_answer3"
                    android:layout_alignLeft="@+id/checkBox_answer3"/>

            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New CheckBox"
                    android:id="@+id/checkBox_answer5"
                    android:layout_below="@+id/checkBox_answer4"
                    android:layout_alignLeft="@+id/checkBox_answer4"/>

        </LinearLayout>
    </ScrollView>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_check"
            android:contentDescription="@string/button_check"
            android:id="@+id/button_check"
            android:src="@drawable/ic_menu_search"
            android:onClick="onClickCheck"
            style="@android:style/Holo.ButtonBar"
            android:layout_alignTop="@+id/button_forwd"
            android:layout_alignRight="@+id/scrollView"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_back"
            android:contentDescription="@string/button_back"
            android:id="@+id/button_back"
            android:onClick="onClickBack"
            android:layout_alignTop="@+id/button_forwd"
            android:src="@drawable/ic_menu_back"
            android:layout_alignLeft="@+id/scrollView"
            style="@android:style/Holo.ButtonBar"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_forward"
            android:contentDescription="@string/button_forward"
            android:id="@+id/button_forwd"
            android:onClick="onClickForwd"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_menu_forward"
            android:baselineAligned="false"
            style="@android:style/Holo.ButtonBar"/>

</RelativeLayout>
